<resources>
    <string name="app_name">Lecture23</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_a_message_to_broadcast">Enter a Message to Broadcast</string>
    <string name="broadcast_message">Broadcast Message</string>
    <string name="broadcast_receiver_one">Broadcast Receiver One</string>
    <string name="trap_broadcast">Trap Broadcast</string>
    <string name="no_message_received">No Message Received</string>
    <string name="broadcast_receiver_two">Broadcast Receiver Two</string>
    <string name="ordered_receivers">Ordered Receivers</string>
    <string name="shout_something">Shout Something</string>
    <string name="whisper_or_shout">Whisper or Shout</string>
    <string name="shout">Shout</string>
    <string name="whisper_something">Whisper Something</string>
    <string name="whisper">Whisper</string>
    <string name="undo">UNDO</string>
    <string name="erase_all">ERASE ALL</string>
    <string name="fill_all">FILL ALL</string>
    <string name="draw_rectangle">DRAW RECTANGLE</string>
    <string name="draw_circle">DRAW CIRCLE</string>
    <string name="paint">PAINT</string>
    <string name="pencil">PENCIL</string>
    <string name="draw_line">DRAW LINE</string>
    <string name="say_something">Say Something</string>
    <string name="redo">REDO</string>
</resources>
