<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mobappdev.lecture23.talktomyself.TalkToMyselfFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/mintyGreen"
        android:padding="10dp"
        android:layout_alignParentTop="true">
        
        <EditText
            android:id="@+id/edit_text_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_a_message_to_broadcast"
            android:gravity="center"
            />

        <Button
            android:id="@+id/button_broadcast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/broadcast_message"
            />
        
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@color/coolBlue"
        android:padding="10dp"
        android:orientation="vertical"
        >
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/broadcast_receiver_one"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="24sp"
            />
        
        <CheckBox
            android:id="@+id/checkbox_trap_broadcast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trap_broadcast"
            android:layout_gravity="center_horizontal"
            />
        
        <TextView
            android:id="@+id/text_view_receiver_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/no_message_received"
            android:fontFamily="monospace"
            android:textSize="20sp"
            android:background="@color/slateGray"
            android:textColor="@color/chalkWhite"
            android:padding="6dp"
            />
        
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:background="@color/prettyPinkFlower"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/broadcast_receiver_two"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="24sp"
            />

        <TextView
            android:id="@+id/text_view_receiver_two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/no_message_received"
            android:fontFamily="monospace"
            android:textSize="20sp"
            android:background="@color/slateGray"
            android:textColor="@color/chalkWhite"
            android:padding="6dp"
            />

    </LinearLayout>

</RelativeLayout>
